--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,13 +35,13 @@
     
     
     </ul>
-         
-         
+    <div class= "ko">     
+    <a class="fa-solid fa-comment" href="/alitzs/ichiran"></a>
 
 
       </ul>
     </div>
- 
+ </div>
 
   </header>
   <main>
