--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@
      "Noto Sans",
   }
   header {
-    background-color: #EEDEDE00;
+    background-color: #fefefe;
     height: 80px;
     font-weight: bold;
     display: flex;
@@ -37,7 +37,12 @@
   }
   header h1 {
     color: black;
-    margin-left: 20px;
+    font-family: 'Capitaly Script PERSONAL USE';
+    margin-left: 30px;
+    font-size: 40px;
+  }
+  .ko{
+    margin-right: 90px
   }
   .header-list {
     display: flex;
@@ -45,12 +50,14 @@
   }
   header ul {
     display: flex;
+    margin-right: 30px
+    
   }
   header li {
     list-style: none;
     margin-right: 40px;
   }
-  .roruin4{
+  .roruin4 a{
     color: black; 
     text-decoration: none; 
   }
@@ -62,3 +69,19 @@
     left: 79px;
     top: 42px
   }
+  .alitz{
+   width: 700px;
+    height: auto;
+    margin-left: 550px;
+    line-height: 30px;
+    font-size: 25px;
+    font-weight: 50;
+    top: 1px;
+    background-color: rgba(4, 4, 4, 0.112); 
+    color:rgba(240, 248, 255, 0.943)
+  }
+
+  .text2 a{
+    color: rgba(255, 255, 255, 0);
+  }
+ 
