--- a/app/views/alitzs/index.html.erb
+++ b/app/views/alitzs/index.html.erb
@@ -1,39 +1,55 @@
-<h1>検索</h1>
+<div class= "jishon">
+<h1>フレーズを検索</h1>
 <%= form_tag({controller:"alitzs",action:"index"}, method: :get) do %>
-    <% Tag.all.each do |t| %>
-        <li><%= check_box :tag_ids, t.name %><%= t.name %></li>
-    <% end %>
-    <%= submit_tag '検索' %>
+    <% Tag2.all.each do |t| %>
+      <div class="moti">
+        <%= check_box :tag2_ids, t.name %><%= t.name %>
+    
+        <% end %>
+       </div> 
 
-<%= link_to "新規読書記録へ", "/alitzs/michiannai" %>
-<%= link_to "新規勉強記録へ", "/alitzs/kaiwa" %>
-<%= link_to "新規書籍購入記録へ", "/alitzs/komatta" %>
+  <%= submit_tag '検索' %>
+   
+  </div>
+    
 
-<% end %>   
-<h3>一覧ページ</h3>
+</div>
+<% end %> 
 
-<div class="aitzs-container">
- 
+<% @alitz.each do |t| %>
+  <div class="alitz">
+    <p>検索結果</p>
+    <%= t.phrase %>
+    <%= t.translation %>
+    <%= t.read %>
+  <% t.tags.each do |tag| %>
+      <%= tag.name %>
+  <% end %>
+    <%= link_to t.user.name, user_path(t.user.id) %>
+    <%= image_tag t.user.image_url, size: "250x200" if t.user.image? %>
+    <%= t.user.email %>
+  </div>
+<% end %>
+
+<div class= "text1">
+「分からない」<br>
+を「分かる」<br>
+に変える。
+</div>
+
+
+<div class="alitzs-container">
+
+<div class= "text2">
 <% if user_signed_in? %>
   <%= link_to "マイページへ", user_path(current_user.id) %>
 <% end %>
+</div>
+  
+<div class= "jishon3">
+<%= link_to "About Dialogo", alitzs_about_path %>
+</div>
 
-<% @alitzs.each do |t| %>
-    <div class="alitz">
-      
-      <%= t.phrase %>
-      <%= t.translation %>
-      <%= t.read %>
-      <% t.tags.each do |tag| %>
-        <%= tag.name %>
-    <% end %>
-      <%= link_to "詳細へ", alitz_path(t.id) %> 
-      <%= link_to "編集する", edit_alitz_path(t.id) %>
-      <%= button_to "削除する", alitz_path(t.id), method: :delete %>
-      <%= link_to t.user.name, user_path(t.user.id) %>
-      <%= image_tag t.user.image_url, size: "250x200" if t.user.image? %>
-      <%= t.user.email %>
-    </div>
-   <% end %>
+</div>
 </div>
   
