--- a/app/views/alitzs/kaiwa.html.erb
+++ b/app/views/alitzs/kaiwa.html.erb
@@ -1,4 +1,4 @@
-<h1>かっこよく言いたい</h1>
+<h1>日常会話</h1>
 <% @kaiwas.each do |t| %>
   <div class="alitz">
       
@@ -16,3 +16,6 @@
   <%= t.user.email %>
 </div>
   <% end %>
+  <div class= "modoru">
+  <%= link_to "戻る", alitzs_ichiran_path %>
+</div> 
