--- a/app/views/alitzs/show.html.erb
+++ b/app/views/alitzs/show.html.erb
@@ -8,6 +8,10 @@
 <%= link_to "投稿一覧に戻る", alitzs_path %>
 <%= link_to "編集する", edit_alitz_path(@alitz.id) %>
 
+
 <% @alitz.tags.each do |tag| %>
   <span><%= tag.name %></span>
   <% end %>
+<% @alitz.tag2s.each do |tag| %>
+    <span><%= tag.name %></span>
+<% end %>
