--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -2,13 +2,17 @@
   <%= link_to "Log in", new_session_path(resource_name) %><br />
 <% end %>
 
+<div class= "kirin1">
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "初めての方はこちら", new_registration_path(resource_name) %><br />
 <% end %>
+</div>
 
+<div class= "kirin2">
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "忘れた方", new_password_path(resource_name) %><br />
 <% end %>
+</div>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
